修改文字信息，popup内容

--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title style="text-align: center;">北京市社区疫情抵抗力地图</title>
+  <title style="text-align: center;">北京社区疫情抵抗力地图</title>
 </head>
 
 <body>
